# libadapt

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  example_config  merge_static_libs.sh  vt_5.14.4_patch_api_hooks
doc/: libadapt.doxy
include/: adapt.h  adapt_internal.h  binary_handling.h
knobs/: c_state_limit.c  c_state_limit.h  dct.c  dct.h  dvfs.c  dvfs.h  fastcpufreq.c  fastcpufreq.h  file.c  file.h  x86_adapt_items.c  x86_adapt_items.h
src/: adapt.c  binary_handling.c  vt_ext_call.c
tests/: README.md  example_config  prepare_new_libconfig_for_travis.sh  test.c  test.sh
